[workspace]
members = [
    "./nstable-exchange",
    "./nst-token",
    "./nai-token",
    "./nai-vault",
    "./test-token",
    "./ve-token",
    "./nstable-farming",
    "./npad",
    "./nstable-farming-v2"
]


[profile.release]
codegen-units = 1
# s = optimize for binary size ("z" would additionally turn off loop vectorization)
opt-level = "z"
# link time optimization
lto = true
debug = false
panic = "abort"
overflow-checks = true
