[package]
name = "nstable_farming"
version = "2.1.6"
authors = ["Marco Sun <sun.dsk1@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uint = { version = "0.9.3", default-features = false }
near-sdk = "3.1.0"
near-contract-standards = "3.1.0"

[dev-dependencies]
near-sdk-sim = "3.1.0"
test-token = { path = "../test-token" }
nstable-exchange = { path = "../nstable-exchange" }
rand = "0.8"
rand_pcg = "0.3"