[package]
name = "token-vesting"
version = "1.4.4"
authors = ["Ben DegaLabs <illia.polosukhin@gmail.com>"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
uint = { version = "0.9.3", default-features = false }
near-sdk = "3.1.0"
near-contract-standards = "3.1.0"

[dev-dependencies]
near-sdk-sim = "3.1.0"
rand = "0.8"
rand_pcg = "0.3"